se agregan modulos por partes de la aplicacion

--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -20,7 +20,7 @@
             <!-- Start Page Content -->
             <!-- ============================================================== -->
             <!-- DUM: en el router outlet se indica que se van a manejar las rutas -->
-            <router-outlet></router-outlet>
+            <!-- <router-outlet></router-outlet> -->
 
             <div class="row">
                 <div class="col-12">
