manejo rutas modulos

--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -19,8 +19,8 @@
             <!-- ============================================================== -->
             <!-- Start Page Content -->
             <!-- ============================================================== -->
-            <!-- DUM: en el router outlet se indica que se van a manejar las rutas -->
-            <!-- <router-outlet></router-outlet> -->
+            <!-- DUM: en el router outlet permite el manejo de rutas y direccionamiento a las paginas, direcciona a las paginas -->
+            <router-outlet></router-outlet>
 
             <div class="row">
                 <div class="col-12">
