se inicia con la proframacion de input

--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -22,7 +22,7 @@
             <!-- DUM: en el router outlet permite el manejo de rutas y direccionamiento a las paginas, direcciona a las paginas -->
             <router-outlet></router-outlet>
 
-            <div class="row">
+            <!--  <div class="row">
                 <div class="col-12">
                     <div class="card">
                         <div class="card-body">
@@ -30,7 +30,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <!-- ============================================================== -->
             <!-- End PAge Content -->
             <!-- ============================================================== -->
