--- a/src/app/components/incrementador/incrementador.component.html
+++ b/src/app/components/incrementador/incrementador.component.html
@@ -1,4 +1,4 @@
-<h3>{{leyenda}}</h3>
+<h3>{{leyenda}} - {{ progreso}}</h3>
 
 <div class="input-group">
     <span class="input-group-btn">
@@ -6,7 +6,7 @@
             <i class="mdi mdi-minus"></i>
         </button>
     </span>
-    <input type="text" class="form-control" name="progreso" [(ngModel)]="progreso">
+    <input #txtValorProgress type="number" class="form-control" name="progreso" [(ngModel)]="progreso" (ngModelChange)="onCambioProgresoCajaTexto($event)" min="1" max="100">
     <span class="input-group-btn">
         <button class="btn btn-primary" type="button" (click)="cambiarValor(+5)" >
             <i class="mdi mdi-plus"></i>
