--- a/src/app/components/grafico-dona/grafico-dona.component.html
+++ b/src/app/components/grafico-dona/grafico-dona.component.html
@@ -1,12 +1,3 @@
-<div class="card">
-    <div class="card-body">
-        <div>
-            <div>
-                <div style="display: block">
-                    <canvas baseChart [data]="datosMostrar" [labels]="etiquetaTitulo" [chartType]="tipoGrafico">
-                    </canvas>
-                </div>
-            </div>
-        </div>
-    </div>
+<div style="display: block">
+    <canvas baseChart [data]="datosMostrar" [labels]="etiquetaTitulo" [chartType]="tipoGrafico"></canvas>
 </div>
