se cambia variables graficos dona

--- a/src/app/pages/graficas1/graficas1.component.html
+++ b/src/app/pages/graficas1/graficas1.component.html
@@ -4,7 +4,7 @@
             <div class="card-body">
                 <div>
                     <div>
-                        <app-grafico-dona [etiquetaTitulo]="graficos.grafico1.labels" [datosMostrar]="graficos.grafico1.data" [tipoGrafico]="graficos.grafico1.type"></app-grafico-dona>
+                        <app-grafico-dona [graficoTitulo]="graficos.grafico1.labels" [graficoDato]="graficos.grafico1.data" [graficoTipo]="graficos.grafico1.type"></app-grafico-dona>
                     </div>
                 </div>
             </div>
@@ -15,7 +15,7 @@
             <div class="card-body">
                 <div>
                     <div>
-                        <app-grafico-dona [etiquetaTitulo]="graficos.grafico2.labels" [datosMostrar]="graficos.grafico2.data" [tipoGrafico]="graficos.grafico2.type"></app-grafico-dona>
+                        <app-grafico-dona [graficoTitulo]="graficos.grafico2.labels" [graficoDato]="graficos.grafico2.data" [graficoTipo]="graficos.grafico2.type"></app-grafico-dona>
                     </div>
                 </div>
             </div>
@@ -29,7 +29,7 @@
             <div class="card-body">
                 <div>
                     <div>
-                        <app-grafico-dona [etiquetaTitulo]="graficos.grafico3.labels" [datosMostrar]="graficos.grafico3.data" [tipoGrafico]="graficos.grafico3.type"></app-grafico-dona>
+                        <app-grafico-dona [graficoTitulo]="graficos.grafico3.labels" [graficoDato]="graficos.grafico3.data" [graficoTipo]="graficos.grafico3.type"></app-grafico-dona>
                     </div>
                 </div>
             </div>
@@ -41,7 +41,7 @@
             <div class="card-body">
                 <div>
                     <div>
-                        <app-grafico-dona [etiquetaTitulo]="graficos.grafico4.labels" [datosMostrar]="graficos.grafico4.data" [tipoGrafico]="graficos.grafico4.type"></app-grafico-dona>
+                        <app-grafico-dona [graficoTitulo]="graficos.grafico4.labels" [graficoDato]="graficos.grafico4.data" [graficoTipo]="graficos.grafico4.type"></app-grafico-dona>
                     </div>
                 </div>
             </div>
