--- a/src/app/components/grafico-dona/grafico-dona.component.html
+++ b/src/app/components/grafico-dona/grafico-dona.component.html
@@ -1,3 +1,3 @@
 <div style="display: block">
-    <canvas baseChart [data]="datosMostrar" [labels]="etiquetaTitulo" [chartType]="tipoGrafico"></canvas>
+    <canvas baseChart [data]="graficoDato" [labels]="graficoTitulo" [chartType]="graficoTipo"></canvas>
 </div>
