se agrega la leyenda de los graficos.

--- a/src/app/pages/graficas1/graficas1.component.html
+++ b/src/app/pages/graficas1/graficas1.component.html
@@ -2,6 +2,7 @@
     <div class="col-6">
         <div class="card">
             <div class="card-body">
+                <h4 class="card-title">{{graficos.grafico1.leyenda}}</h4>
                 <div>
                     <div>
                         <app-grafico-dona [graficoTitulo]="graficos.grafico1.labels" [graficoDato]="graficos.grafico1.data" [graficoTipo]="graficos.grafico1.type"></app-grafico-dona>
@@ -13,6 +14,7 @@
     <div class="col-6">
         <div class="card">
             <div class="card-body">
+                <h4 class="card-title">{{graficos.grafico2.leyenda}}</h4>
                 <div>
                     <div>
                         <app-grafico-dona [graficoTitulo]="graficos.grafico2.labels" [graficoDato]="graficos.grafico2.data" [graficoTipo]="graficos.grafico2.type"></app-grafico-dona>
@@ -27,6 +29,7 @@
     <div class="col-6">
         <div class="card">
             <div class="card-body">
+                <h4 class="card-title">{{graficos.grafico3.leyenda}}</h4>
                 <div>
                     <div>
                         <app-grafico-dona [graficoTitulo]="graficos.grafico3.labels" [graficoDato]="graficos.grafico3.data" [graficoTipo]="graficos.grafico3.type"></app-grafico-dona>
@@ -39,6 +42,7 @@
     <div class="col-6">
         <div class="card">
             <div class="card-body">
+                <h4 class="card-title">{{graficos.grafico4.leyenda}}</h4>
                 <div>
                     <div>
                         <app-grafico-dona [graficoTitulo]="graficos.grafico4.labels" [graficoDato]="graficos.grafico4.data" [graficoTipo]="graficos.grafico4.type"></app-grafico-dona>
