--- a/src/app/login/register.component.html
+++ b/src/app/login/register.component.html
@@ -4,33 +4,43 @@
 <section id="wrapper" class="login-register login-sidebar" style="background-image:url(../../assets/images/background/login-register.jpg);">
     <div class="login-box card">
         <div class="card-body">
-            <form class="form-horizontal form-material" id="loginform" action="index.html">
+            <form ngNativeValidate ngnativ [formGroup]="format" (ngSubmit)="registrarUsuario()" class="form-horizontal form-material" id="loginform" action="index.html">
                 <a href="javascript:void(0)" class="text-center db"><img src="../../assets/images/logo-icon.png" alt="Home" /><br/><img src="../../assets/images/logo-text.png" alt="Home" /></a>
                 <h3 class="box-title m-t-40 m-b-0">Registrate Ahora</h3><small>Crea tu cuenta y difruta</small>
                 <div class="form-group m-t-20">
                     <div class="col-xs-12">
-                        <input class="form-control" type="text" required="" placeholder="Nombre">
+                        <input formControlName="nombre" name="nombre" class="form-control" type="text" required="" placeholder="Nombre">
                     </div>
                 </div>
                 <div class="form-group ">
                     <div class="col-xs-12">
-                        <input class="form-control" type="text" required="" placeholder="Email">
+                        <input formControlName="apellidos" name="apellidos" class="form-control" type="text" required="" placeholder="Apellidos">
                     </div>
                 </div>
                 <div class="form-group ">
                     <div class="col-xs-12">
-                        <input class="form-control" type="password" required="" placeholder="Contraseña">
+                        <input formControlName="correo" name="correo" class="form-control" type="text" required="" placeholder="Email">
                     </div>
+                </div>
+                <div class="form-group ">
+                    <div class="col-xs-12">
+                        <input formControlName="password" name="password" class="form-control" type="password" required="" placeholder="Contraseña">
+                    </div>
+                </div>
+                <div class="form-group ">
+                    <p class="text-danger" *ngIf="format.errors?.sonIguales && !format.pristine">
+                        Las contraseñas deben de ser iuguales
+                    </p>
                 </div>
                 <div class="form-group">
                     <div class="col-xs-12">
-                        <input class="form-control" type="password" required="" placeholder="Confirmar Contraseña">
+                        <input formControlName="password2" name="password2" class="form-control" type="password" required="" placeholder="Confirmar Contraseña">
                     </div>
                 </div>
                 <div class="form-group row">
                     <div class="col-md-12">
                         <div class="checkbox checkbox-primary p-t-0">
-                            <input id="checkbox-signup" type="checkbox">
+                            <input formControlName="condiciones" name="condiciones" id="checkbox-signup" type="checkbox">
                             <label for="checkbox-signup"> Estoy de acuerdo con todos <a href="#">Los terminos</a></label>
                         </div>
                     </div>
