--- a/src/app/login/register.component.html
+++ b/src/app/login/register.component.html
@@ -4,7 +4,7 @@
 <section id="wrapper" class="login-register login-sidebar" style="background-image:url(../../assets/images/background/login-register.jpg);">
     <div class="login-box card">
         <div class="card-body">
-            <form ngNativeValidate ngnativ [formGroup]="format" (ngSubmit)="registrarUsuario()" class="form-horizontal form-material" id="loginform" action="index.html">
+            <form ngNativeValidate ngnativ [formGroup]="forma" (ngSubmit)="registrarUsuario()" class="form-horizontal form-material" id="loginform" action="index.html">
                 <a href="javascript:void(0)" class="text-center db"><img src="../../assets/images/logo-icon.png" alt="Home" /><br/><img src="../../assets/images/logo-text.png" alt="Home" /></a>
                 <h3 class="box-title m-t-40 m-b-0">Registrate Ahora</h3><small>Crea tu cuenta y difruta</small>
                 <div class="form-group m-t-20">
@@ -28,7 +28,7 @@
                     </div>
                 </div>
                 <div class="form-group ">
-                    <p class="text-danger" *ngIf="format.errors?.sonIguales && !format.pristine">
+                    <p class="text-danger" *ngIf="forma.errors?.sonIguales && !forma.pristine">
                         Las contraseñas deben de ser iuguales
                     </p>
                 </div>
