--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -1,1 +1,63 @@
-<p>profile works!</p>
+<div class="row animated fadeIn">
+    <div class="col-lg-7">
+        <div class="card">
+            <div class="card-body">
+                <h4 class="card-title">Perfil del usuario</h4>
+                <h6 class="card-subtitle">nombre usuario</h6>
+                <form ngNativeValidate #f="ngForm" (ngSubmit)="guardar(f.value)" class="form-horizontal p-t-20">
+                    <div class="form-group row">
+                        <label for="exampleInputuname3" class="col-sm-3 control-label">Nombre de usuario*</label>
+                        <div class="col-sm-9">
+                            <div class="input-group">
+                                <div class="input-group-addon"><i class="ti-user"></i></div>
+                                <input type="text" name="nombre" class="form-control" required placeholder="Nombre de usuario" [ngModel]="usuario.nombre">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="exampleInputuname3" class="col-sm-3 control-label">Apellidos*</label>
+                        <div class="col-sm-9">
+                            <div class="input-group">
+                                <div class="input-group-addon"><i class="ti-user"></i></div>
+                                <input type="text" name="apellidos" [disabled]="usuario.google" class="form-control" required placeholder="Apellidos de usuario" [ngModel]="usuario.apellidos">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="exampleInputEmail3" class="col-sm-3 control-label">Correo del usuario*</label>
+                        <div class="col-sm-9">
+                            <div class="input-group">
+                                <div class="input-group-addon"><i class="ti-email"></i></div>
+                                <input type="email" name="email" [disabled]="usuario.google" class="form-control" required placeholder="Correo del usuario" [ngModel]="usuario.email">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group row m-b-0">
+                        <div class="offset-sm-3 col-sm-9">
+                            <button type="submit" class="btn btn-success waves-effect waves-light">
+                                <i class="fa fa-save"></i>
+                                Guardar</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-5">
+        <div class="card">
+            <div class="card-body">
+                <h4 class="card-title">Fotografía del usuario</h4>
+                <h6 class="card-subtitle">nombre usuario</h6>
+                <br>
+                <input type="file">
+                <br>
+                <br>
+
+                <div class="offset-sm-3 col-sm-9">
+                    <button type="submit" class="btn btn-success waves-effect waves-light"> <i class="fa fa-save"></i>  Actualizar Foto</button>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
