--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -49,12 +49,13 @@
                 <h4 class="card-title">Fotografía del usuario</h4>
                 <h6 class="card-subtitle">nombre usuario</h6>
                 <br>
-                <input type="file">
+                <img src="">
+                <input (change)="seleccionImage($event.target.files[0])" type="file">
                 <br>
                 <br>
 
                 <div class="offset-sm-3 col-sm-9">
-                    <button type="submit" class="btn btn-success waves-effect waves-light"> <i class="fa fa-save"></i>  Actualizar Foto</button>
+                    <button (click)="cambiarImagen()" type="submit" class="btn btn-success waves-effect waves-light"> <i class="fa fa-save"></i>  Actualizar Foto</button>
                 </div>
 
             </div>
