--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -47,9 +47,10 @@
         <div class="card">
             <div class="card-body">
                 <h4 class="card-title">Fotografía del usuario</h4>
-                <h6 class="card-subtitle">nombre usuario</h6>
+                <h6 class="card-subtitle">{{usuario.nombre}}</h6>
                 <br>
-                <img src="">
+                <img *ngIf="!imagenTemp" [src]="usuario.img | imagen" class="w150">
+                <img *ngIf="imagenTemp" [src]="imagenTemp" class="w150">
                 <input (change)="seleccionImage($event.target.files[0])" type="file">
                 <br>
                 <br>
