inicio cargar imagen modal

--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -43,3 +43,5 @@
     <!-- Fin Page wrapper  -->
     <!-- ============================================================== -->
 </div>
+<!-- DUM: Modal upload cargar imagen -->
+<app-modal-upload></app-modal-upload>
