--- a/src/app/components/modal-upload/modal-upload.component.html
+++ b/src/app/components/modal-upload/modal-upload.component.html
@@ -1,10 +1,10 @@
-<div class="fondo-negro animated fadeIn" [ngClass]="oculto">
+<div class="fondo-negro animated fadeIn" [ngClass]="modalUploadService.oculto">
     <div class="modal" style="display: block;" tabindex="-1" role="dialog">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title">Modal title</h5>
-                    <button (click)="oculto='oculto'" type="button" class="close" aria-label="Close">
+                    <button (click)="cerrarModal()" type="button" class="close" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
                 </div>
@@ -15,8 +15,8 @@
                     <input (change)="seleccionImage($event.target.files[0])" type="file">
                 </div>
                 <div class="modal-footer">
-                    <button (click)="oculto='oculto'" [disabled]="!imagenTemp" type="button" class="btn btn-secondary">Cerrar</button>
-                    <button (click)="subirImagen()" type="button" class="btn btn-primary">Subir Imagen</button>
+                    <button (click)="cerrarModal()" type="button" class="btn btn-secondary">Cerrar</button>
+                    <button (click)="subirImagen()" [disabled]="!imagenTemp" type="button" class="btn btn-primary">Subir Imagen</button>
                 </div>
             </div>
         </div>
