--- a/src/app/pages/usuarios/usuarios.component.html
+++ b/src/app/pages/usuarios/usuarios.component.html
@@ -39,7 +39,7 @@
                     </thead>
                     <tbody>
                         <tr *ngFor="let usuario of usuarios">
-                            <td class="w70"><img [src]="usuario.img | imagen" class="img-50 img-circle"></td>
+                            <td (click)="mostrarModal(usuario._id)" class="w70"><img [src]="usuario.img | imagen" class="img-50 img-circle pointer"></td>
                             <td>{{usuario.email}}</td>
                             <td>{{usuario.nombre}}</td>
                             <td>{{usuario.apellidos}}</td>
