--- a/src/app/pages/hospitales/hospitales.component.html
+++ b/src/app/pages/hospitales/hospitales.component.html
@@ -1,1 +1,72 @@
-<p>hospitales works!</p>
+<div class="row animated fadeIn">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-body">
+                <input #input (keyup)="buscarHospital(input.value)" type="text" class="form-control" placeholder="Buscar Hospital">
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+<div class="row animated fadeIn" *ngIf="cargando">
+    <div class="col-sm-12">
+        <div class="alert alert-warning text-center">
+            <strong>Cargando..</strong>
+            <br>
+            <i class="fa fa-refresh fa-spin fa-2x"></i>
+            <br>
+            <span>Espera por favor</span>
+        </div>
+    </div>
+</div>
+
+<div class="row animated fadeIn" *ngIf="!cargando">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-body">
+                <table>
+                    <td>
+                        <h3 class="card-title"> Hospitales resgistrados (<small>{{totalRegistro}}</small>) </h3>
+                    </td>
+                    <td> <button (click)="crearHospital()" class="btn btn-primary">
+                        <i class="fa fa-trash-o"></i>
+                        Crear Hospital
+                    </button></td>
+                </table>
+
+                <table class="table table-hover">
+                    <thead class="thead-inverse">
+                        <th scope="col">Imagen</th>
+                        <th scope="col">Hospital</th>
+                        <th scope="col"></th>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let hospital of hospitales">
+                            <td (click)="mostrarModal(hospital._id)" class="w70"><img [src]="hospital.img | imagen:'hospital'" class="img-50 img-circle pointer"></td>
+                            <td> <input [(ngModel)]="hospital.nombre" name="nombre" class="form-control"> </td>
+
+                            <td class="float-right">
+                                <button (click)="guardarHospital(hospital)" class="btn btn-primary">
+                                    <i class="fa fa-save"></i>
+                                </button>
+                                <div class="btn-group" role="group"> | | </div>
+                                <button (click)="borrarHospital(hospital)" class="btn btn-danger">
+                                    <i class="fa fa-trash-o"></i>
+                                </button>
+                            </td>
+                        </tr>
+                    </tbody>
+
+                </table>
+                <button (click)="cambiarDesde(-5)" class="btn btn-secondary">
+                   Anteriores
+                </button>
+                <button (click)="cambiarDesde(5)" class="btn btn-secondary">
+                    Siguiente
+                 </button>
+            </div>
+        </div>
+    </div>
+</div>
